added 'about' to form.html

--- a/templates/form.html
+++ b/templates/form.html
@@ -66,7 +66,7 @@
                     <h2>More Information</h2>
 
                     <label>Description of Business:</label>
-                    <input class="about-box" type="text" name="about" placeholder="Write a description of your business to let your customers know what you're about!"><br><br>
+                    <input class="about-box" type="text" name="About" placeholder="Write a description of your business to let your customers know what you're about!"><br><br>
                 </div>
             </div>
 
