added 'about' to display.html

--- a/templates/display.html
+++ b/templates/display.html
@@ -69,7 +69,7 @@
                 <div>
                     <h2>About</h2>
                     <p>
-                        We make ice cream about the ingredients we use and the farms and artisans they come from. About how we cook and freeze and candy and sort and burn and smash and hand-drizzle and ribbon and spoon and sprinkle all of our ingredients in intriguing and unexpected ways.
+                        {{.About}}
                     </p>
                 </div><!-- About -->
             </div>
