Syntax is hard, i am not smart

--- a/templates/form.html
+++ b/templates/form.html
@@ -51,13 +51,13 @@
                     <input class="input-box" type="text" name="Twitter" placeholder="Your Twitter Link"><br>
 
                     <label>Facebook:</label>
-                    <input class="input-box" type="text" name="facebook" placeholder="Your Facebook Link"><br>
+                    <input class="input-box" type="text" name="Facebook" placeholder="Your Facebook Link"><br>
 
                     <label>Instagram:</label>
-                    <input class="input-box" type="text" name="insta" placeholder="Your Instagram Link"><br>
+                    <input class="input-box" type="text" name="Instagram" placeholder="Your Instagram Link"><br>
 
                     <label>Pinterest:</label>
-                    <input class="input-box" type="text" name="pinterest" placeholder="Your Pinterest Link"><br><br>
+                    <input class="input-box" type="text" name="Pinterest" placeholder="Your Pinterest Link"><br><br>
                 </div>
             </div>
 
