--- a/templates/display.html
+++ b/templates/display.html
@@ -53,10 +53,13 @@
                             {{.Phone}}
                         </li>
                     </ul>
-                    <a class="icon-button twitter" href={{.Twitter}}><i class="fab fa-twitter"></i><span></span></a>
-                    <a class="icon-button facebook" href={{.Facebook}}><i class="fab fa-facebook-f"></i><span></span></a>
-                    <a class="icon-button instagram" href={{.Instagram}}><i class="fab fa-instagram"></i><span></span></a>
-                    <a class="icon-button pinterest" href={{.Pinterest}}><i class="fab fa-pinterest-p"></i><span></span></a>
+                    <div class="icon">
+                        <a class="icon-button twitter" href={{.Twitter}}><i class="fab fa-twitter"></i><span></span></a>
+                        <a class="icon-button facebook" href={{.Facebook}}><i class="fab fa-facebook-f"></i><span></span></a>
+                        <a class="icon-button instagram" href={{.Instagram}}><i class="fab fa-instagram"></i><span></span></a>
+                        <a class="icon-button pinterest" href={{.Pinterest}}><i class="fab fa-pinterest-p"></i><span></span></a>
+                    </div>
+
                 </div>
                 <div>
                     <img src={{.Logo}} class="mycircleimg" />
