small change to display

--- a/templates/css/display_style.css
+++ b/templates/css/display_style.css
@@ -95,7 +95,7 @@ ul {
     width: 225px;
     height: 225px;
     border-radius: 50%;
-    /*   object-fit:cover; */
+    object-fit:cover;
 }
 
 #pads {
