changed routing after creating

--- a/templates/options.html
+++ b/templates/options.html
@@ -22,20 +22,20 @@
 						<h1>Micro Business Online Platform</h1><br>
 						<div class="line-button-container">
 						<h3>If you would like to navigate to your webpage, click the following button.</h3>
-						<button class="button-attributes" type="button">
+						<button class="button-attributes" type="button" onclick="window.location.href='{{.ViewLink}}';">
 							Go to your page
 						</button>
 						</div>
-						
+
 						<div class="line-button-container">
 							<h3>If you would like to to order your free QR code for your website, click the following button.</h3>
-							<button class="button-attributes" type="button">
+							<button class="button-attributes" type="button" onclick="window.location.href='{{.OrderLink}}';">
 								Order QR Code
 							</button>
 						</div>
 					</div>
-					
-					
+
+
 				</div>
 
 			</div>
