--- a/templates/display.html
+++ b/templates/display.html
@@ -7,6 +7,18 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css'>
         <link rel="stylesheet" type="text/css" href="/css/display_style.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.3.1/css/ol.css" type="text/css">
+        <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.3.1/build/ol.js"></script>
+        <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <style>
+            .map {
+                height: 400px;
+                width: 100%;
+            }
+        </style>
     </head>
     <body>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
@@ -108,12 +120,12 @@
                 </div>
                 <div>
                     <h2>Location</h2>
-                    <h8> this is our map </h8>
+                    <div id="map" class="map" style="width: 500px; height: 400px;"><div id="popup"></div></div>
+                    <script id="generate-map" src="/js/map_script.js" lat={{.Latitude}} lng={{.Longitude}} name={{.Name}}></script>
                 </div>
             </div>
         </div>
         <script src="/js/display_script.js"></script>
-
     </body>
 
 </html>
