--- a/templates/display.html
+++ b/templates/display.html
@@ -66,10 +66,10 @@
                         </li>
                     </ul>
                     <div class="icon">
-                        <a class="icon-button twitter" href={{.Twitter}}><i class="fab fa-twitter"></i><span></span></a>
-                        <a class="icon-button facebook" href={{.Facebook}}><i class="fab fa-facebook-f"></i><span></span></a>
-                        <a class="icon-button instagram" href={{.Instagram}}><i class="fab fa-instagram"></i><span></span></a>
-                        <a class="icon-button pinterest" href={{.Pinterest}}><i class="fab fa-pinterest-p"></i><span></span></a>
+                        <a class="icon-button twitter" onclick="window.location.href='{{.Twitter}}';"><i class="fab fa-twitter"></i><span></span></a>
+                        <a class="icon-button facebook" onclick="window.location.href='{{.Facebook}}';"><i class="fab fa-facebook-f"></i><span></span></a>
+                        <a class="icon-button instagram" onclick="window.location.href='{{.Instagram}}';"><i class="fab fa-instagram"></i><span></span></a>
+                        <a class="icon-button pinterest" onclick="window.location.href='{{.Pinterest}}';"><i class="fab fa-pinterest-p"></i><span></span></a>
                     </div>
 
                 </div>
