display actual QR code

--- a/templates/qrcode.html
+++ b/templates/qrcode.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-		
+
 		<div class="content-column">
 			<div class="column-item">
 				<img class="logo-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Square%2C_Inc._logo.svg/1280px-Square%2C_Inc._logo.svg.png">
@@ -19,7 +19,7 @@
 
 				<div class="subcolumns">
 					<div>
-						<img class="qrimage" src="https://www.qr-code-generator.com/wp-content/themes/qr/new_structure/markets/core_market_full/generator/dist/generator/assets/images/websiteQRCode_noFrame.png">
+						<img class="qrimage" src={{.}}>
 					</div>
 					<div>
 						<p>Share your website with your customers! Display your QR code sticker at your place of business. Your sticker sheet will arrive in 7-10 business days via USPS.</p>
@@ -36,7 +36,7 @@
 						</div>
 					</div>
 				</div>
-				
+
 			</div>
 		</div>
 
